changes to reflect architectural rearrangement